<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CROSS Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="getCellPhoneInfo">Start Logging</string>
    <string name="defaultGPRSAddress">http://10.215.4.2:8080/user_locations.json</string>
    <string name="defaultWifiAddress">http://10.215.4.2:8080/user_locations.json</string>
    <string name="defaultInterval">2</string>

    <string name="pref_GPRS_IP_address">"GPRS IP Address"</string>
    <string name="pref_WIFI_IP_address">"Wifi IP Address"</string>

    <string name="pref_manual_mode">"Manual Mode"</string>
    <string name="pref_manual_mode_desc">"Set app settings manually instead of fetching from server."</string>

    <string name="pref_update_interval">"Minimum Update Interval"</string>
    <string name="pref_update_interval_desc">"Minimum update interval in seconds."</string>

    <string name="pref_debug_msg">"Debug Messages"</string>
    <string name="pref_debug_msg_desc">"Display debug messages on send."</string>
    <string name="pref_dynamic_locations">"Dynamic Locations"</string>
    <string name="pref_dynamic_locations_desc">"Only send data to server after some movement."</string>
    <string name="pref_pressure_asl">"Pressure at sea level"</string>
    <string name="pref_pressure_asl_desc">"Pressure at sea level in hPa. Used to compute altitude."</string>
    <string name="pref_offline">"Offline mode"</string>
    <string name="pref_offline_desc">"Also write to CSV file on phone."</string>

    <string name="csv_fields">"time,mcc,mnc,network_type,signal_strength,lat,lon,alt"</string>
</resources>